K8s/moodify-deploy.yaml
# AudioService
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audioservice
  namespace: moodify
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: audioservice
  template:
    metadata:
      labels:
        app: audioservice
    spec:
      containers:
        - name: audioservice
          image: moodifyacr1764849759.azurecr.io/audioservice:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/Audio/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/Audio/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: audioservice
spec:
  type: ClusterIP
  selector:
    app: audioservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
# PlaylistService
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlistservice
  namespace: moodify
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: playlistservice
  template:
    metadata:
      labels:
        app: playlistservice
    spec:
      containers:
        - name: playlistservice
          image: moodifyacr1764849759.azurecr.io/playlistservice:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/Playlist/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/Playlist/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: playlistservice
spec:
  type: ClusterIP
  selector:
    app: playlistservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
# AuthService
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  namespace: moodify
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: moodifyacr1764849759.azurecr.io/authservice:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/Auth/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/Auth/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
# UserService
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  namespace: moodify
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: moodifyacr1764849759.azurecr.io/userservice:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /api/User/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/User/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
# Frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: moodify
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: moodifyacr1764849759.azurecr.io/frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
